feat(projects): update content and improve styles in projects section WIP
- Updated project descriptions and details
- Improved visual styles and layout for better readability

--- a/Portafolio Udemi/data/projects.json
+++ b/Portafolio Udemi/data/projects.json
@@ -1,7 +1,7 @@
 [
   {
     "id": "obi-tienda",
-    "title": "Obi tienda online",
+    "title": "SuperMe",
     "description": "Aplicación web para gestionar y personalizar tu experiencia de compra en una tienda online. Explora los productos más populares, tus artículos favoritos, el historial de tus compras recientes y detalles específicos de cada producto. Crea y guarda nuevas listas de deseos recomendadas basadas en tus intereses y compras anteriores.",
     "github": "https://github.com/tania/obi-tienda",
     "demo": "https://taniaarteaga.dev/obi-tienda",
